config-root/namespaces/jx-production/py-http/py-http-py-http-deploy.yaml
# Source: py-http/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: py-http-py-http
  labels:
    draft: draft-app
    chart: "py-http-0.0.2"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'py-http'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-production
spec:
  selector:
    matchLabels:
      app: py-http-py-http
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: py-http-py-http
    spec:
      serviceAccountName: py-http-py-http
      containers:
      - name: py-http
        image: "ghcr.io/nigle-dev/py-http:0.0.2"
        imagePullPolicy: IfNotPresent
        envFrom: null
        ports:
        - name: http
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 400m
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
      - name: "tekton-container-registry-auth"
